Tweak for Media Kits

--- a/wp-content/themes/americas_farmers/scss/theme/components/_hero.scss
+++ b/wp-content/themes/americas_farmers/scss/theme/components/_hero.scss
@@ -18,5 +18,17 @@
     justify-content: flex-start;
     align-items: middle
   }
+
+  &.hero-download_callouts{
+    .hero-img-container{
+      min-height: 45vh;
+      @include grid-media($medium-min) {
+        min-height: 65vh;
+      }
+    }
+    
+  }
   
 }
+
+
