--- a/wp-content/themes/americas_farmers/scss/theme/components/_fifty-fifty-repeater.scss
+++ b/wp-content/themes/americas_farmers/scss/theme/components/_fifty-fifty-repeater.scss
@@ -62,6 +62,16 @@
 			.content-text{
 
 				margin-bottom: 40px;
+				.program-logo {
+					margin-bottom: 30px;
+					width: 25%;
+					img {
+						display: block;
+					}
+				}
+				h3, h5 {
+					color: #fff;
+				}
 				a.button {
 					background-color: white;
 					color: $navyBlue;
