--- a/wp-content/plugins/wp-defender/assets/css/otp.css
+++ b/wp-content/plugins/wp-defender/assets/css/otp.css
@@ -1,5 +1,5 @@
 body.login div#login h1 a {
-	background-image: url("../img/2factor-disabled.svg");		 	    	     	 			  
+	background-image: url("../img/2factor-disabled.svg");
 }
 
 body.login div#login form {
@@ -27,4 +27,4 @@ body.login div#login form {
 }
 
 
-/* 626401-1611954721-ai */
+/* 397935-1613762623-au */
